// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct error rate data 1`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 0,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": null,
  },
  Object {
    "x": 1627974480000,
    "y": 0,
  },
  Object {
    "x": 1627974540000,
    "y": 0,
  },
  Object {
    "x": 1627974600000,
    "y": 0,
  },
  Object {
    "x": 1627974660000,
    "y": 0,
  },
  Object {
    "x": 1627974720000,
    "y": null,
  },
  Object {
    "x": 1627974780000,
    "y": 0,
  },
  Object {
    "x": 1627974840000,
    "y": null,
  },
  Object {
    "x": 1627974900000,
    "y": 0,
  },
  Object {
    "x": 1627974960000,
    "y": null,
  },
  Object {
    "x": 1627975020000,
    "y": null,
  },
  Object {
    "x": 1627975080000,
    "y": 0,
  },
  Object {
    "x": 1627975140000,
    "y": null,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct error rate data 2`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 0,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": 1,
  },
  Object {
    "x": 1627974480000,
    "y": 0,
  },
  Object {
    "x": 1627974540000,
    "y": 0,
  },
  Object {
    "x": 1627974600000,
    "y": null,
  },
  Object {
    "x": 1627974660000,
    "y": null,
  },
  Object {
    "x": 1627974720000,
    "y": 0.25,
  },
  Object {
    "x": 1627974780000,
    "y": null,
  },
  Object {
    "x": 1627974840000,
    "y": 0,
  },
  Object {
    "x": 1627974900000,
    "y": 0,
  },
  Object {
    "x": 1627974960000,
    "y": 0,
  },
  Object {
    "x": 1627975020000,
    "y": 0,
  },
  Object {
    "x": 1627975080000,
    "y": 0.5,
  },
  Object {
    "x": 1627975140000,
    "y": 0.25,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct latency data 1`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 72303,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": null,
  },
  Object {
    "x": 1627974480000,
    "y": 173055,
  },
  Object {
    "x": 1627974540000,
    "y": 26687,
  },
  Object {
    "x": 1627974600000,
    "y": 17867.8,
  },
  Object {
    "x": 1627974660000,
    "y": 24319,
  },
  Object {
    "x": 1627974720000,
    "y": null,
  },
  Object {
    "x": 1627974780000,
    "y": 15743,
  },
  Object {
    "x": 1627974840000,
    "y": null,
  },
  Object {
    "x": 1627974900000,
    "y": 31679,
  },
  Object {
    "x": 1627974960000,
    "y": null,
  },
  Object {
    "x": 1627975020000,
    "y": null,
  },
  Object {
    "x": 1627975080000,
    "y": 14391,
  },
  Object {
    "x": 1627975140000,
    "y": null,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct latency data 2`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 34047,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": 5767167,
  },
  Object {
    "x": 1627974480000,
    "y": 10335,
  },
  Object {
    "x": 1627974540000,
    "y": 118015,
  },
  Object {
    "x": 1627974600000,
    "y": null,
  },
  Object {
    "x": 1627974660000,
    "y": null,
  },
  Object {
    "x": 1627974720000,
    "y": 1371695,
  },
  Object {
    "x": 1627974780000,
    "y": null,
  },
  Object {
    "x": 1627974840000,
    "y": 3769087,
  },
  Object {
    "x": 1627974900000,
    "y": 19015,
  },
  Object {
    "x": 1627974960000,
    "y": 22356.3333333333,
  },
  Object {
    "x": 1627975020000,
    "y": 28447,
  },
  Object {
    "x": 1627975080000,
    "y": 33434367,
  },
  Object {
    "x": 1627975140000,
    "y": 23407,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct throughput data 1`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 2,
  },
  Object {
    "x": 1627974360000,
    "y": 0,
  },
  Object {
    "x": 1627974420000,
    "y": 0,
  },
  Object {
    "x": 1627974480000,
    "y": 1,
  },
  Object {
    "x": 1627974540000,
    "y": 1,
  },
  Object {
    "x": 1627974600000,
    "y": 2,
  },
  Object {
    "x": 1627974660000,
    "y": 1,
  },
  Object {
    "x": 1627974720000,
    "y": 0,
  },
  Object {
    "x": 1627974780000,
    "y": 1,
  },
  Object {
    "x": 1627974840000,
    "y": 0,
  },
  Object {
    "x": 1627974900000,
    "y": 2,
  },
  Object {
    "x": 1627974960000,
    "y": 0,
  },
  Object {
    "x": 1627975020000,
    "y": 0,
  },
  Object {
    "x": 1627975080000,
    "y": 4,
  },
  Object {
    "x": 1627975140000,
    "y": 0,
  },
  Object {
    "x": 1627975200000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct throughput data 2`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 1,
  },
  Object {
    "x": 1627974360000,
    "y": 0,
  },
  Object {
    "x": 1627974420000,
    "y": 1,
  },
  Object {
    "x": 1627974480000,
    "y": 2,
  },
  Object {
    "x": 1627974540000,
    "y": 2,
  },
  Object {
    "x": 1627974600000,
    "y": 0,
  },
  Object {
    "x": 1627974660000,
    "y": 0,
  },
  Object {
    "x": 1627974720000,
    "y": 3,
  },
  Object {
    "x": 1627974780000,
    "y": 0,
  },
  Object {
    "x": 1627974840000,
    "y": 2,
  },
  Object {
    "x": 1627974900000,
    "y": 3,
  },
  Object {
    "x": 1627974960000,
    "y": 2,
  },
  Object {
    "x": 1627975020000,
    "y": 1,
  },
  Object {
    "x": 1627975080000,
    "y": 2,
  },
  Object {
    "x": 1627975140000,
    "y": 3,
  },
  Object {
    "x": 1627975200000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 1`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 34047,
  },
  Object {
    "x": 1627973460000,
    "y": null,
  },
  Object {
    "x": 1627973520000,
    "y": 5767167,
  },
  Object {
    "x": 1627973580000,
    "y": 10335,
  },
  Object {
    "x": 1627973640000,
    "y": 118015,
  },
  Object {
    "x": 1627973700000,
    "y": null,
  },
  Object {
    "x": 1627973760000,
    "y": null,
  },
  Object {
    "x": 1627973820000,
    "y": 1371695,
  },
  Object {
    "x": 1627973880000,
    "y": null,
  },
  Object {
    "x": 1627973940000,
    "y": 3769087,
  },
  Object {
    "x": 1627974000000,
    "y": 19015,
  },
  Object {
    "x": 1627974060000,
    "y": 22356.3333333333,
  },
  Object {
    "x": 1627974120000,
    "y": 28447,
  },
  Object {
    "x": 1627974180000,
    "y": 33434367,
  },
  Object {
    "x": 1627974240000,
    "y": 23407,
  },
  Object {
    "x": 1627974300000,
    "y": 72303,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": null,
  },
  Object {
    "x": 1627974480000,
    "y": 173055,
  },
  Object {
    "x": 1627974540000,
    "y": 26687,
  },
  Object {
    "x": 1627974600000,
    "y": 17867.8,
  },
  Object {
    "x": 1627974660000,
    "y": 24319,
  },
  Object {
    "x": 1627974720000,
    "y": null,
  },
  Object {
    "x": 1627974780000,
    "y": 15743,
  },
  Object {
    "x": 1627974840000,
    "y": null,
  },
  Object {
    "x": 1627974900000,
    "y": 31679,
  },
  Object {
    "x": 1627974960000,
    "y": null,
  },
  Object {
    "x": 1627975020000,
    "y": null,
  },
  Object {
    "x": 1627975080000,
    "y": 14391,
  },
  Object {
    "x": 1627975140000,
    "y": null,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 2`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 1,
  },
  Object {
    "x": 1627973460000,
    "y": 0,
  },
  Object {
    "x": 1627973520000,
    "y": 1,
  },
  Object {
    "x": 1627973580000,
    "y": 2,
  },
  Object {
    "x": 1627973640000,
    "y": 2,
  },
  Object {
    "x": 1627973700000,
    "y": 0,
  },
  Object {
    "x": 1627973760000,
    "y": 0,
  },
  Object {
    "x": 1627973820000,
    "y": 3,
  },
  Object {
    "x": 1627973880000,
    "y": 0,
  },
  Object {
    "x": 1627973940000,
    "y": 2,
  },
  Object {
    "x": 1627974000000,
    "y": 3,
  },
  Object {
    "x": 1627974060000,
    "y": 2,
  },
  Object {
    "x": 1627974120000,
    "y": 1,
  },
  Object {
    "x": 1627974180000,
    "y": 2,
  },
  Object {
    "x": 1627974240000,
    "y": 3,
  },
  Object {
    "x": 1627974300000,
    "y": 2,
  },
  Object {
    "x": 1627974360000,
    "y": 0,
  },
  Object {
    "x": 1627974420000,
    "y": 0,
  },
  Object {
    "x": 1627974480000,
    "y": 1,
  },
  Object {
    "x": 1627974540000,
    "y": 1,
  },
  Object {
    "x": 1627974600000,
    "y": 2,
  },
  Object {
    "x": 1627974660000,
    "y": 1,
  },
  Object {
    "x": 1627974720000,
    "y": 0,
  },
  Object {
    "x": 1627974780000,
    "y": 1,
  },
  Object {
    "x": 1627974840000,
    "y": 0,
  },
  Object {
    "x": 1627974900000,
    "y": 2,
  },
  Object {
    "x": 1627974960000,
    "y": 0,
  },
  Object {
    "x": 1627975020000,
    "y": 0,
  },
  Object {
    "x": 1627975080000,
    "y": 4,
  },
  Object {
    "x": 1627975140000,
    "y": 0,
  },
  Object {
    "x": 1627975200000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 3`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 0,
  },
  Object {
    "x": 1627973460000,
    "y": null,
  },
  Object {
    "x": 1627973520000,
    "y": 1,
  },
  Object {
    "x": 1627973580000,
    "y": 0,
  },
  Object {
    "x": 1627973640000,
    "y": 0,
  },
  Object {
    "x": 1627973700000,
    "y": null,
  },
  Object {
    "x": 1627973760000,
    "y": null,
  },
  Object {
    "x": 1627973820000,
    "y": 0.25,
  },
  Object {
    "x": 1627973880000,
    "y": null,
  },
  Object {
    "x": 1627973940000,
    "y": 0,
  },
  Object {
    "x": 1627974000000,
    "y": 0,
  },
  Object {
    "x": 1627974060000,
    "y": 0,
  },
  Object {
    "x": 1627974120000,
    "y": 0,
  },
  Object {
    "x": 1627974180000,
    "y": 0.5,
  },
  Object {
    "x": 1627974240000,
    "y": 0.25,
  },
  Object {
    "x": 1627974300000,
    "y": 0,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": null,
  },
  Object {
    "x": 1627974480000,
    "y": 0,
  },
  Object {
    "x": 1627974540000,
    "y": 0,
  },
  Object {
    "x": 1627974600000,
    "y": 0,
  },
  Object {
    "x": 1627974660000,
    "y": 0,
  },
  Object {
    "x": 1627974720000,
    "y": null,
  },
  Object {
    "x": 1627974780000,
    "y": 0,
  },
  Object {
    "x": 1627974840000,
    "y": null,
  },
  Object {
    "x": 1627974900000,
    "y": 0,
  },
  Object {
    "x": 1627974960000,
    "y": null,
  },
  Object {
    "x": 1627975020000,
    "y": null,
  },
  Object {
    "x": 1627975080000,
    "y": 0,
  },
  Object {
    "x": 1627975140000,
    "y": null,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data for latency aggregation 99th percentile 1`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 34047,
  },
  Object {
    "x": 1627973460000,
    "y": null,
  },
  Object {
    "x": 1627973520000,
    "y": 5767167,
  },
  Object {
    "x": 1627973580000,
    "y": 16127,
  },
  Object {
    "x": 1627973640000,
    "y": 214015,
  },
  Object {
    "x": 1627973700000,
    "y": null,
  },
  Object {
    "x": 1627973760000,
    "y": null,
  },
  Object {
    "x": 1627973820000,
    "y": 5439487,
  },
  Object {
    "x": 1627973880000,
    "y": null,
  },
  Object {
    "x": 1627973940000,
    "y": 5668863,
  },
  Object {
    "x": 1627974000000,
    "y": 32255,
  },
  Object {
    "x": 1627974060000,
    "y": 28159,
  },
  Object {
    "x": 1627974120000,
    "y": 44287,
  },
  Object {
    "x": 1627974180000,
    "y": 66846719,
  },
  Object {
    "x": 1627974240000,
    "y": 42751,
  },
  Object {
    "x": 1627974300000,
    "y": 140287,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": null,
  },
  Object {
    "x": 1627974480000,
    "y": 173055,
  },
  Object {
    "x": 1627974540000,
    "y": 28927,
  },
  Object {
    "x": 1627974600000,
    "y": 39679,
  },
  Object {
    "x": 1627974660000,
    "y": 24319,
  },
  Object {
    "x": 1627974720000,
    "y": null,
  },
  Object {
    "x": 1627974780000,
    "y": 15743,
  },
  Object {
    "x": 1627974840000,
    "y": null,
  },
  Object {
    "x": 1627974900000,
    "y": 33791,
  },
  Object {
    "x": 1627974960000,
    "y": null,
  },
  Object {
    "x": 1627975020000,
    "y": null,
  },
  Object {
    "x": 1627975080000,
    "y": 23167,
  },
  Object {
    "x": 1627975140000,
    "y": null,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;
